Added Special Deals page and Starting Adding Content to Utensils Page

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
             </div>  
 
             <nav class="categories">
-                <li><a href="#">Utensils</a></li>
-                <li><a href="#">GlassWares</a></li>
-                <li><a href="#">Cookwares</a></li>
-                <li><a href="#">Knives</a></li>
-                <li><a href="#">Storage</a></li>
-                <li><a href="#">Baking Tools</a></li>
-                <li><a href="#">Kitchen Appliances</a></li>
-                <li><a href="#">Accessories</a></li>
+                <li><a href="utensils.html">Utensils</a></li>
+                <li><a href="glasswares.html">GlassWares</a></li>
+                <li><a href="cookwares.html">Cookwares</a></li>
+                <li><a href="knives.html">Knives</a></li>
+                <li><a href="storage.html">Storage</a></li>
+                <li><a href="bakingtools.html">Baking Tools</a></li>
+                <li><a href="kitchenappliances.html">Kitchen Appliances</a></li>
+                <li><a href="accessories.html">Accessories</a></li>
             </nav>
         </header>
 
@@ -64,7 +64,7 @@
         <div class="banner1">
             <img src="images/banner5.png" alt="banner image">
             <p class="banner1message">Up to 50% off on selected items — discover special offers on quality kitchen tools designed for everyday cooking.</p>
-            <button type="submit" class="banner1ShopNow">Shop Now!</button>
+            <a href="specialdeals.html" class="banner1ShopNow">Shop Now!</a>
         </div>
     </section>
 
@@ -75,29 +75,29 @@
 
     <figure>
         <img src="images/Featured-Ceramic Pot with Lid- P329.99.png" alt="Featured-Ceramic Pot with Lid- P329.99">
-        <figcaption class="imgLabelf">Featured-Ceramic Pot with Lid- P329.99</figcaption>
+        <figcaption class="imgLabelf">Featured-Ceramic Pot with Lid- ₱329.99</figcaption>
     </figure>
 
     <figure>
         <img src="images/Featured-Double Wall Cappuccino Glass Mug- P149.99.png" alt="Double Wall Cappuccino Glass Mug- P149.99">
-        <figcaption class="imgLabelf">Double Wall Cappuccino Glass Mug- P149.99</figcaption>
+        <figcaption class="imgLabelf">Double Wall Cappuccino Glass Mug- ₱149.99</figcaption>
     </figure>
 
     <figure>
         <img src="images/Featured-NonStick Frying Pan 11inches-P274.99.png" alt="NonStick Frying Pan 11inches-P274.99">
-        <figcaption class="imgLabelf">NonStick Frying Pan 11inches-P274.99</figcaption>
+        <figcaption class="imgLabelf">NonStick Frying Pan 11inches-₱274.99</figcaption>
     </figure>
     <figure>
         <img src="images/Featured-Saucer-P34.99.png" alt="Saucer-P34.99">
-        <figcaption class="imgLabelf">Saucer-P34.99</figcaption>
+        <figcaption class="imgLabelf">Saucer-₱34.99</figcaption>
     </figure>
     <figure>
         <img src="images/Featured-Single Storage Jar 15oz- P179.99.png" alt="Single Storage Jar 15oz- P179.99">
-        <figcaption class="imgLabelf">Single Storage Jar 15oz- P179.99</figcaption>
+        <figcaption class="imgLabelf">Single Storage Jar 15oz- ₱179.99</figcaption>
     </figure>
     <figure>
         <img src="images/Featured-Wine Glass- P124.49.png" alt="Wine Glass- P124.49">
-        <figcaption class="imgLabelf">Wine Glass- P124.49</figcaption>
+        <figcaption class="imgLabelf">Wine Glass- ₱124.49</figcaption>
     </figure>
 
 </div>
@@ -129,7 +129,7 @@
 </section>
 
 
- <h2 class="h2">Organizers</h2>
+<h2 class="h2">Organizers</h2>
 <section class="section3">
     <div class="organizer">
         <figure>
@@ -159,16 +159,17 @@
     </div>
 </section>
 
+<div class="myBottom">
 <section class="category2">
     <nav class="categories">
-        <li><a href="#">Utensils</a></li>
-        <li><a href="#">GlassWares</a></li>
-        <li><a href="#">Cookwares</a></li>
-        <li><a href="#">Knives</a></li>
-        <li><a href="#">Storage</a></li>
-        <li><a href="#">Baking Tools</a></li>
-        <li><a href="#">Kitchen Appliances</a></li>
-        <li><a href="#">Accessories</a></li>
+        <li><a href="utensils.html">Utensils</a></li>
+        <li><a href="glasswares.html">GlassWares</a></li>
+        <li><a href="cookwares.html">Cookwares</a></li>
+        <li><a href="knives.html">Knives</a></li>
+        <li><a href="storage.html">Storage</a></li>
+        <li><a href="bakingtools.html">Baking Tools</a></li>
+        <li><a href="kitchenappliances.html">Kitchen Appliances</a></li>
+        <li><a href="accessories.html">Accessories</a></li>
     </nav>
 </section>
 
@@ -263,7 +264,7 @@
                 </div>
         </div>
 
-         <div class="row2-7">
+        <div class="row2-7">
             <h4>Follow Us</h4>
                 <div class="socialMedia">
                     <a href="Facebook.com" aria-label="Facebook Link"><img src="images/fb logo.png" alt="fb logo"></a>
@@ -273,7 +274,7 @@
                 </div>
         </div>
 
-          <div class="row3-7">
+        <div class="row3-7">
             <h4>Shipping Courriers</h4>
                 <div class="shipping">
                     <a href="flashexpress.ph" aria-label="Flash Express Link"><img src="images/Delivery-FlashExpress.png" alt="fb logo"></a>
@@ -300,9 +301,8 @@
     </div>
 </section>
 
-<footer class="footer">@ 2026 HomeKitchen Studio. All Rights Reserved --- Designed by JFR</footer>
-
-
+<footer class="footer">@ 2026 HomeKitchen Studio. All Rights Reserved --- Designed by Joan Faith Gepullano</footer>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
