Added Glasswares Content for Mugs and Wine Glasses

--- a/index.html
+++ b/index.html
@@ -72,39 +72,64 @@
 <section class="section2">
 
 <div class="featured">
-
+<div class="wholefeature">
     <figure>
         <img src="images/Featured-Ceramic Pot with Lid- P329.99.png" alt="Featured-Ceramic Pot with Lid- P329.99">
-        <figcaption class="imgLabelf">Featured-Ceramic Pot with Lid- ₱329.99</figcaption>
+        <figcaption class="imgLabelf">Modern Ceramic Pot with Matching Lid</figcaption>
+        <p class="price">₱329.99</p>
     </figure>
+    <button type="submit" class="addtocartf"
+    data-id="1"
+    data-name="Modern Ceramic Pot with Matching Lid"
+    data-price="329.99"
+    >Add to Cart</button>
+</div>
 
+<div class="wholefeature">
     <figure>
         <img src="images/Featured-Double Wall Cappuccino Glass Mug- P149.99.png" alt="Double Wall Cappuccino Glass Mug- P149.99">
-        <figcaption class="imgLabelf">Double Wall Cappuccino Glass Mug- ₱149.99</figcaption>
+        <figcaption class="imgLabelf">Double Wall Cappuccino Glass Mug</figcaption>
+        <p class="price">₱149.99</p>
     </figure>
-
+    <button type="submit" class="addtocartf">Add to Cart</button>
+</div>
+<div class="wholefeature">
     <figure>
         <img src="images/Featured-NonStick Frying Pan 11inches-P274.99.png" alt="NonStick Frying Pan 11inches-P274.99">
-        <figcaption class="imgLabelf">NonStick Frying Pan 11inches-₱274.99</figcaption>
+        <figcaption class="imgLabelf">NonStick Frying Pan 11inches</figcaption>
+        <p class="price">₱274.99</p>
     </figure>
+    <button type="submit" class="addtocartf">Add to Cart</button>
+</div>
+<div class="wholefeature">
     <figure>
-        <img src="images/Featured-Saucer-P34.99.png" alt="Saucer-P34.99">
-        <figcaption class="imgLabelf">Saucer-₱34.99</figcaption>
+        <img src="images/Featured-Saucer-P34.99.png" alt="Classic Round Ceramic Saucer Dish-P34.99">
+        <figcaption class="imgLabelf">Classic Round Ceramic Saucer Dish</figcaption>
+        <p class="price">₱34.99</p>
     </figure>
+    <button type="submit" class="addtocartf">Add to Cart</button>
+</div>
+<div class="wholefeature">
     <figure>
-        <img src="images/Featured-Single Storage Jar 15oz- P179.99.png" alt="Single Storage Jar 15oz- P179.99">
-        <figcaption class="imgLabelf">Single Storage Jar 15oz- ₱179.99</figcaption>
+        <img src="images/Featured-Single Storage Jar 15oz- P179.99.png" alt="Clear Glass Single Storage Jar 15oz- P179.99">
+        <figcaption class="imgLabelf">Clear Glass Single Storage Jar 15oz</figcaption>
+        <p class="price">₱179.99</p>
     </figure>
+    <button type="submit" class="addtocartf">Add to Cart</button>
+</div>
+<div class="wholefeature">
     <figure>
-        <img src="images/Featured-Wine Glass- P124.49.png" alt="Wine Glass- P124.49">
-        <figcaption class="imgLabelf">Wine Glass- ₱124.49</figcaption>
+        <img src="images/Featured-Wine Glass- P124.49.png" alt="Tall Stem Clear Wine Glass- P124.49">
+        <figcaption class="imgLabelf">Tall Stem Classic Clear Wine Glass</figcaption>
+        <p class="price">₱124.49</p>
     </figure>
-
+    <button type="submit" class="addtocartf">Add to Cart</button>
+</div>
 </div>
 
 </section>
 
-    <h2 class="h2">Our Collections</h2>
+    <h2 class="h2">Collections</h2>
 <section class="section2">
 
 <div class="collection">
