--- a/specialdeals.html
+++ b/specialdeals.html
@@ -44,7 +44,7 @@
 
             <nav class="categories">
                 <li><a href="#">Utensils</a></li>
-                <li><a href="#">GlassWares</a></li>
+                <li><a href="glasswares.html">GlassWares</a></li>
                 <li><a href="#">Cookwares</a></li>
                 <li><a href="#">Knives</a></li>
                 <li><a href="#">Storage</a></li>
@@ -68,7 +68,7 @@
                 <p class="now">₱519.35</p>
             </div>
 
-            <button type="submit" class="cartSpecial">Add to Cart</button>
+            <button type="submit" class="addtocart">Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">35% Off</p>
@@ -86,7 +86,7 @@
                 <p class="now">₱64.50</p>
             </div>
 
-            <button type="submit" class="cartSpecial">Add to Cart</button>
+            <button type="submit" class="addtocart">Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">50% Off</p>
@@ -103,7 +103,7 @@
                 <p class="now">₱247.50</p>
             </div>
 
-            <button type="submit" class="cartSpecial">Add to Cart</button>
+            <button type="submit" class="addtocart">Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">45% Off</p>
@@ -121,7 +121,7 @@
                 <p class="now">₱349.30</p>
             </div>
 
-            <button type="submit" class="cartSpecial">Add to Cart</button>
+            <button type="submit" class="addtocart">Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">30% Off</p>
@@ -139,7 +139,7 @@
                 <p class="now">₱974.25</p>
             </div>
 
-            <button type="submit" class="cartSpecial">Add to Cart</button>
+            <button type="submit" class="addtocart">Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">25% Off</p>
@@ -157,7 +157,7 @@
                 <p class="now">₱1,679.40</p>
             </div>
 
-            <button type="submit" class="cartSpecial">Add to Cart</button>
+            <button type="submit" class="addtocart">Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">40% Off</p>
@@ -175,7 +175,7 @@
                 <p class="now">₱479.20</p>
             </div>
 
-            <button type="submit" class="cartSpecial">Add to Cart</button>
+            <button type="submit" class="addtocart">Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">20% Off</p>
@@ -193,7 +193,7 @@
                 <p class="now">₱215.10</p>
             </div>
 
-            <button type="submit" class="cartSpecial">Add to Cart</button>
+            <button type="submit" class="addtocart">Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">10 % Off</p>
