Made some changes to layout of Glassware Page, index, and special deals. Added BackToTop button, with JS functionality, also added add-to-cart JS logic for addtocart buttons in Featured Section

--- a/glasswares.html
+++ b/glasswares.html
@@ -61,7 +61,16 @@
         <a href="glasswares.html">Glasswares</a>
     </section>
 
-    <h2 class="mugsLabel">Mugs</h2>
+    <div class="glasswaresOptions">
+        <ul>
+            <li><a href="#mugs">Mugs</a></li>
+            <li><a href="#wineGlass">Wine Glasses</a></li>
+            <li><a href="#wineGlass">Drinking Glasses</a></li>
+            <li><a href="#wineGlass">Water Bottles</a></li>
+        </ul>
+    </div>
+
+    <h2 class="mugsLabel" id="mugs">Mugs</h2>
     <section class="mugs">
             <img src="images/Mugs Banner.jpg" alt="Mugs Banner">
             <div class="mugsBannerLabel">
@@ -136,7 +145,7 @@
         <button class="viewmoreButton">View More</button>
     </div>
 
-    <h2 class="wineglassLabel">Wine Glasses</h2>
+    <h2 class="wineglassLabel" id="wineGlass">Wine Glasses</h2>
     <section class="wineGlass">
             <img src="images/Wine Glass Banner final.png" alt="Wine Glass Banner">
             <div class="wineglassBannerLabel">
@@ -355,6 +364,12 @@
 
 <footer class="footer">@ 2026 HomeKitchen Studio. All Rights Reserved --- Designed by Joan Faith Gepullano</footer>
 </div>
+
+
+<div class="backtotop" id="backtotop">
+    <p><a href="#headerContent">▲ Back To Top</a></p>
+</div>
+
     <script src="script.js"></script>
 </body>
 </html>
