--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 <nav class="signIn">
                     <ul>
-                        <li><a href="cart.html"> <i class="fa-solid fa-cart-shopping"></i>Cart</a></li>
+                        <li id="cartIcon"><a href="cart.html"> <i class="fa-solid fa-cart-shopping"></i>Cart</a></li>
                         <li><a href="signIn.html"><i class="fa-regular fa-user"></i>Sign In</a></li>
                         <li><a href="contactus.html"> <i class="fa-solid fa-phone"></i>Contact Us</a></li>
                     </ul>
@@ -72,58 +72,58 @@
 <section class="section2">
 
 <div class="featured">
-<div class="wholefeature">
+<div class="wholefeature" data-id="1" data-name="Modern Ceramic Pot with Matching Lid" data-price="329.99">
     <figure>
         <img src="images/Featured-Ceramic Pot with Lid- P329.99.png" alt="Featured-Ceramic Pot with Lid- P329.99">
         <figcaption class="imgLabelf">Modern Ceramic Pot with Matching Lid</figcaption>
         <p class="price">₱329.99</p>
     </figure>
-    <button type="submit" class="addtocartf"
-    data-id="1"
-    data-name="Modern Ceramic Pot with Matching Lid"
-    data-price="329.99"
-    >Add to Cart</button>
+    <button type="button" class="addtocartf">Add to Cart</button>
 </div>
 
-<div class="wholefeature">
+<div class="wholefeature" data-id="2" data-name="Double Wall Cappuccino Glass Mug" data-price="149.99">
     <figure>
         <img src="images/Featured-Double Wall Cappuccino Glass Mug- P149.99.png" alt="Double Wall Cappuccino Glass Mug- P149.99">
         <figcaption class="imgLabelf">Double Wall Cappuccino Glass Mug</figcaption>
         <p class="price">₱149.99</p>
     </figure>
-    <button type="submit" class="addtocartf">Add to Cart</button>
+    <button type="button" class="addtocartf">Add to Cart</button>
 </div>
-<div class="wholefeature">
+
+<div class="wholefeature" data-id="3" data-name="NonStick Frying Pan 11inches" data-price="274.99">
     <figure>
         <img src="images/Featured-NonStick Frying Pan 11inches-P274.99.png" alt="NonStick Frying Pan 11inches-P274.99">
         <figcaption class="imgLabelf">NonStick Frying Pan 11inches</figcaption>
         <p class="price">₱274.99</p>
     </figure>
-    <button type="submit" class="addtocartf">Add to Cart</button>
+    <button type="button" class="addtocartf">Add to Cart</button>
 </div>
-<div class="wholefeature">
+
+<div class="wholefeature" data-id="4" data-name="Classic Round Ceramic Saucer Dish" data-price="34.99">
     <figure>
         <img src="images/Featured-Saucer-P34.99.png" alt="Classic Round Ceramic Saucer Dish-P34.99">
         <figcaption class="imgLabelf">Classic Round Ceramic Saucer Dish</figcaption>
         <p class="price">₱34.99</p>
     </figure>
-    <button type="submit" class="addtocartf">Add to Cart</button>
+    <button type="button" class="addtocartf">Add to Cart</button>
 </div>
-<div class="wholefeature">
+
+<div class="wholefeature" data-id="5" data-name="Clear Glass Single Storage Jar 15oz" data-price="179.99">
     <figure>
         <img src="images/Featured-Single Storage Jar 15oz- P179.99.png" alt="Clear Glass Single Storage Jar 15oz- P179.99">
         <figcaption class="imgLabelf">Clear Glass Single Storage Jar 15oz</figcaption>
         <p class="price">₱179.99</p>
     </figure>
-    <button type="submit" class="addtocartf">Add to Cart</button>
+    <button type="button" class="addtocartf">Add to Cart</button>
 </div>
-<div class="wholefeature">
+
+<div class="wholefeature" data-id="6" data-name="Tall Stem Classic Clear Wine Glass" data-price="124.49">
     <figure>
         <img src="images/Featured-Wine Glass- P124.49.png" alt="Tall Stem Clear Wine Glass- P124.49">
         <figcaption class="imgLabelf">Tall Stem Classic Clear Wine Glass</figcaption>
         <p class="price">₱124.49</p>
     </figure>
-    <button type="submit" class="addtocartf">Add to Cart</button>
+    <button type="button" class="addtocartf">Add to Cart</button>
 </div>
 </div>
 
@@ -133,22 +133,24 @@
 <section class="section2">
 
 <div class="collection">
-
+<div class="collectionEach">
     <figure>
         <img src="images/Collections-1-Kitchen Appliances.png" alt="Kitchen Appliances">
         <figcaption class="imgLabel">Kitchen Appliances</figcaption>
     </figure>
-
+</div>
+<div class="collectionEach">
     <figure>
         <img src="images/Collections-2-Wooden Cutlery.png" alt="Wooden Cutlery">
         <figcaption class="imgLabel">Wooden Cutlery</figcaption>
     </figure>
-
+</div>
+<div class="collectionEach">
     <figure>
         <img src="images/Collections-3-Kitchen Cookware.png" alt="Kitchen Cookware">
         <figcaption class="imgLabel">Kitchen Cookwares</figcaption>
     </figure>
-
+</div>
 </div>
 
 </section>
@@ -292,20 +294,20 @@
         <div class="row2-7">
             <h4>Follow Us</h4>
                 <div class="socialMedia">
-                    <a href="Facebook.com" aria-label="Facebook Link"><img src="images/fb logo.png" alt="fb logo"></a>
-                    <a href="Twitter.com" aria-label="Twitter Link"><img src="images/twitter logo.png" alt="twitter logo"></a>
-                    <a href="Instagram.com" aria-label="Instagram Link"><img src="images/instagram logo.png" alt="Instagram Logo"></a>
-                    <a href="LinkedIn.com" aria-label="LinkedIn Link"><img src="images/linkedin logo.png" alt="LinkedIn logo"></a>
+                    <a href="https://www.facebook.com" aria-label="Facebook Link" target="_blank"><img src="images/fb logo.png" alt="fb logo"></a>
+                    <a href="https://www.Twitter.com" aria-label="Twitter Link" target="_blank"><img src="images/twitter logo.png" alt="twitter logo"></a>
+                    <a href="https://www.Instagram.com" aria-label="Instagram Link" target="_blank"><img src="images/instagram logo.png" alt="Instagram Logo"></a>
+                    <a href="https://www.LinkedIn.com" aria-label="LinkedIn Link" target="_blank"><img src="images/linkedin logo.png" alt="LinkedIn logo"></a>
                 </div>
         </div>
 
         <div class="row3-7">
             <h4>Shipping Courriers</h4>
                 <div class="shipping">
-                    <a href="flashexpress.ph" aria-label="Flash Express Link"><img src="images/Delivery-FlashExpress.png" alt="fb logo"></a>
-                    <a href="FedEx.com" aria-label="FedEx Link"><img src="images/Delivery-FedEx.png" alt="twitter logo"></a>
-                    <a href="Ninjavan.co" aria-label="Ninja Van Link"><img src="images/Delivery-NinjaVan.png" alt="Instagram Logo"></a>
-                    <a href="lbcexpress.com" aria-label="LBC Express Link"><img src="images/Deliver-LBCExpress.png" alt="LinkedIn logo"></a>
+                    <a href="https://www.flashexpress.ph" target="_blank" aria-label="Flash Express Link"><img src="images/Delivery-FlashExpress.png" alt="fb logo"></a>
+                    <a href="https://www.FedEx.com" aria-label="FedEx Link" target="_blank"><img src="images/Delivery-FedEx.png" alt="twitter logo"></a>
+                    <a href="https://www.Ninjavan.co" aria-label="Ninja Van Link" target="_blank"><img src="images/Delivery-NinjaVan.png" alt="Instagram Logo"></a>
+                    <a href="https://www.lbcexpress.com" aria-label="LBC Express Link" target="_blank"><img src="images/Deliver-LBCExpress.png" alt="LinkedIn logo"></a>
                 </div>
         </div>
 
@@ -328,6 +330,11 @@
 
 <footer class="footer">@ 2026 HomeKitchen Studio. All Rights Reserved --- Designed by Joan Faith Gepullano</footer>
 </div>
+
+<div class="backtotop" id="backtotop">
+    <p>▲ Back To Top</p>
+</div>
+
     <script src="script.js"></script>
 </body>
 </html>
