--- a/specialdeals.html
+++ b/specialdeals.html
@@ -68,7 +68,11 @@
                 <p class="now">₱519.35</p>
             </div>
 
-            <button type="submit" class="addtocart">Add to Cart</button>
+            <button type="button" class="addtocart"
+            data-id="2" 
+            data-name="Ceramic Plates Set of 3"
+            data-price="519.35"
+            >Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">35% Off</p>
@@ -86,7 +90,7 @@
                 <p class="now">₱64.50</p>
             </div>
 
-            <button type="submit" class="addtocart">Add to Cart</button>
+            <button type="button" class="addtocart">Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">50% Off</p>
@@ -103,7 +107,7 @@
                 <p class="now">₱247.50</p>
             </div>
 
-            <button type="submit" class="addtocart">Add to Cart</button>
+            <button type="button" class="addtocart">Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">45% Off</p>
@@ -121,7 +125,7 @@
                 <p class="now">₱349.30</p>
             </div>
 
-            <button type="submit" class="addtocart">Add to Cart</button>
+            <button type="button" class="addtocart">Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">30% Off</p>
@@ -139,7 +143,7 @@
                 <p class="now">₱974.25</p>
             </div>
 
-            <button type="submit" class="addtocart">Add to Cart</button>
+            <button type="button" class="addtocart">Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">25% Off</p>
@@ -157,7 +161,7 @@
                 <p class="now">₱1,679.40</p>
             </div>
 
-            <button type="submit" class="addtocart">Add to Cart</button>
+            <button type="button" class="addtocart">Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">40% Off</p>
@@ -175,7 +179,7 @@
                 <p class="now">₱479.20</p>
             </div>
 
-            <button type="submit" class="addtocart">Add to Cart</button>
+            <button type="button" class="addtocart">Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">20% Off</p>
@@ -193,7 +197,7 @@
                 <p class="now">₱215.10</p>
             </div>
 
-            <button type="submit" class="addtocart">Add to Cart</button>
+            <button type="button" class="addtocart">Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">10 % Off</p>
@@ -345,6 +349,12 @@
 
 <footer class="footer">@ 2026 HomeKitchen Studio. All Rights Reserved --- Designed by Joan Faith Gepullano</footer>
 </div>
+
+
+<div class="backtotop" id="backtotop">
+    <p><a href="#headerContent">▲ Back To Top</a></p>
+</div>
+
     <script src="script.js"></script>
 </body>
 </html>
