--- a/specialdeals.html
+++ b/specialdeals.html
@@ -55,9 +55,9 @@
         </header>
     </section>
 
-    <div class="sdBanner"></div>
+    <div class="sdBanner" alt="Special Deals Banner"></div>
     <main class="specialdeals">
-        <div class="dealsImg">
+        <div class="dealsImg" data-id="1s" data-name="Ceramic Plates Set of 3" data-old-price="799.00" data-new-price="519.35">
             <figure>
                 <img src="images/Specialdeal-1-Ceramic Plates Set of 3-cropped.png" alt="Ceramic Plates Set of 3">
             </figure>
@@ -68,18 +68,17 @@
                 <p class="now">₱519.35</p>
             </div>
 
-            <button type="button" class="addtocart"
-            data-id="2" 
-            data-name="Ceramic Plates Set of 3"
-            data-price="519.35"
-            >Add to Cart</button>
+            <button type="button" class="addtocart">Add to Cart</button>
                 <div class="salegroup">
                     <p class="sale">Sale</p>
                     <p class="discount">35% Off</p>
                 </div>
+            <div>
+                <p class="updateCart"></p>
+            </div>
         </div>
 
-        <div class="dealsImg">
+        <div class="dealsImg" data-id="2s" data-name="Double Wall Mug" data-old-price="129.00" data-new-price="64.50">
             <figure>
                 <img src="images/Specialdeal-2-Double Wall mug.png" alt="Empty Blender">
             </figure>
@@ -95,9 +94,12 @@
                     <p class="sale">Sale</p>
                     <p class="discount">50% Off</p>
                 </div>
+            <div>
+                <p class="updateCart"></p>
+            </div>
         </div>
 
-        <div class="dealsImg">
+        <div class="dealsImg" data-id="3s" data-name="Spice Jars Set of 5"  data-old-price="450.00" data-new-price="247.50">
                 <img src="images/Specialdeal-3-Spice Jars Set of 5-cropped.png" alt="Spice Jars Set of 5">
             </figure>
             <figcaption class="dealsLabel">Spice Jars Set of 5</figcaption>
@@ -112,9 +114,12 @@
                     <p class="sale">Sale</p>
                     <p class="discount">45% Off</p>
                 </div>
+            <div>
+                <p class="updateCart"></p>
+            </div>
         </div>
             
-        <div class="dealsImg">
+        <div class="dealsImg" data-id="4s" data-name="White Ceramic Pot"  data-old-price="499.00" data-new-price="349.30">
             <figure>
                 <img src="images/Specialdeal-4-White Ceramic Pot-cropped.png" alt="White Ceramic Pot">
             </figure>
@@ -130,9 +135,12 @@
                     <p class="sale">Sale</p>
                     <p class="discount">30% Off</p>
                 </div>
+            <div>
+                <p class="updateCart"></p>
+            </div>
         </div>
 
-        <div class="dealsImg">
+        <div class="dealsImg" data-id="5s" data-name="Griller"  data-old-price="1,299.00" data-new-price="974.25">
             <figure>
                 <img src="images/Specialdeal-5-Griller.png" alt="Griller">
             </figure>
@@ -148,9 +156,12 @@
                     <p class="sale">Sale</p>
                     <p class="discount">25% Off</p>
                 </div>
+            <div>
+                <p class="updateCart"></p>
+            </div>
         </div>
 
-        <div class="dealsImg">
+        <div class="dealsImg" data-id="6s" data-name="Mix Bundles"  data-old-price="2,799.00" data-new-price="1,679.40">
             <figure>
                 <img src="images/Specialdeal-6-Mix Bundles.png" alt="Mix Bundles">
             </figure>
@@ -166,9 +177,12 @@
                     <p class="sale">Sale</p>
                     <p class="discount">40% Off</p>
                 </div>
+            <div>
+                <p class="updateCart"></p>
+            </div>
         </div>
 
-        <div class="dealsImg">
+        <div class="dealsImg" data-id="7s" data-name="Stainless Steel Knife Set of 3"  data-old-price="599.00" data-new-price="479.20">
             <figure>
                 <img src="images/Specialdeal-7-Stainless Steel Knife Set of 3.png" alt="Stainless Steel Knife Set of 3">
             </figure>
@@ -184,9 +198,12 @@
                     <p class="sale">Sale</p>
                     <p class="discount">20% Off</p>
                 </div>
+            <div>
+                <p class="updateCart"></p>
+            </div>
         </div>
 
-        <div class="dealsImg">
+        <div class="dealsImg" data-id="8s" data-name="Wooden Chopping board" data-old-price="239.00" data-new-price="215.10">
             <figure>
                 <img src="images/Specialdeals-8-Wooden Chopping board.png" alt="Wooden Chopping board">
             </figure>
@@ -202,6 +219,9 @@
                     <p class="sale">Sale</p>
                     <p class="discount">10 % Off</p>
                 </div>
+            <div>
+                <p class="updateCart"></p>
+            </div>
         </div>
     </main>
 
