Created indivudual folder for JS and CSS

--- a/glasswares.html
+++ b/glasswares.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomeKitchen Studio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS FOLDER/glasswares.css">
+    <link rel="stylesheet" href="CSS FOLDER/backtotop.css">
+    <link rel="stylesheet" href="CSS FOLDER/footer.css">
+    <link rel="stylesheet" href="CSS FOLDER/header.css">
+    <link rel="stylesheet" href="CSS FOLDER/universal&body.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -370,6 +374,6 @@
     <p><a href="#headerContent">▲ Back To Top</a></p>
 </div>
 
-    <script src="script.js"></script>
+    <script src="JS FOLDER/backtotop.js"></script>
 </body>
 </html>
