--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomeKitchen Studio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS FOLDER/main.css">
+    <link rel="stylesheet" href="CSS FOLDER/footer.css">
+    <link rel="stylesheet" href="CSS FOLDER/header.css">
+    <link rel="stylesheet" href="CSS FOLDER/backtotop.css">
+    <link rel="stylesheet" href="CSS FOLDER/universal&body.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -36,7 +40,7 @@
                 <nav class="signIn">
                     <ul>
                         <li id="cartIcon"><a href="cart.html"> <i class="fa-solid fa-cart-shopping"></i>Cart</a></li>
-                        <li><a href="signIn.html"><i class="fa-regular fa-user"></i>Sign In</a></li>
+                        <li><a href="signin.html"><i class="fa-regular fa-user"></i>Sign In</a></li>
                         <li><a href="contactus.html"> <i class="fa-solid fa-phone"></i>Contact Us</a></li>
                     </ul>
                 </nav>
@@ -335,6 +339,6 @@
     <p>▲ Back To Top</p>
 </div>
 
-    <script src="script.js"></script>
+    <script src="JS FOLDER/main.js"></script>
 </body>
 </html>
